


internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attack = "attack";
    internal static string enableMove = "enableMove";
    internal static string targetLock = "targetLock";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string hit = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string AtkCooldown = "atkCooldown";
}